--- a/login.html
+++ b/login.html
@@ -57,7 +57,7 @@
 
     // Will use popup for IDP Providers sign-in flow instead of the default, redirect.
     signInFlow: 'popup',
-    signInSuccessUrl: 'http://localhost:5500/',
+    signInSuccessUrl: 'https://xue-ad.github.io/gm.github.io/login.html',
     signInOptions: [
       // Leave the lines as is for the providers you want to offer your users.
       firebase.auth.GoogleAuthProvider.PROVIDER_ID
